Added CRUD options and started working on EntityFrameworkCore migration

--- a/TransportPartner/appsettings.json
+++ b/TransportPartner/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TransportPartnerContext": "Server=(localdb)\\mssqllocaldb;Database=TransportPartner;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
